k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP          #Type of Service
  ports:
    - port: 3000          #Port for the Service itself
      targetPort: 3000    #Port for the Targeted Pod
  selector:               #Compliments the Label in Pod
    component: web
