k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP          #Type of Service
  ports:
    - port: 6379          #Port for the Service itself
      targetPort: 6379    #Port for the Targeted Pod
  selector:               #Compliments the Label in Pod
    component: redis
