k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP          #Type of Service
  ports:
    - port: 5000          #Port for the Service itself
      targetPort: 5000    #Port for the Targeted Pod
  selector:               #Compliments the Label in Pod
    component: server
